<resources>
    <string name="app_name">Demo</string>
    <string name="take_up_your_first_project">Take up your First project</string>
    <string name="skip">skip</string>
    <string name="arrow_back">arrow back</string>
    <string name="image">image</string>
    <string name="product_testing_review">Product Testing and Review</string>
    <string name="campus_ambassador">Campus Ambassador</string>
    <string name="glam_ambassador">Glam Ambassador</string>
    <string name="sample_distribution">Sample Distribution</string>
    <string name="home_icon">home icon</string>
    <string name="in">in</string>
    <string name="hwy_carthage">Hwy, Carthage</string>
    <string name="middle_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin</string>
    <string name="homer_j_allen">Homer J. Allen</string>
    <string name="city_office">City, Office</string>
    <string name="short_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="_45_likes">45 likes</string>
    <string name="_12_comments">12 Comments</string>
    <string name="_12h_ago">12h ago</string>
    <string name="lillie_hoyos">Lillie Hoyos</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin
        \n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin
    </string>
    <string name="all_post">All post</string>
    <string name="toggle">toggle</string>
    <string name="emma_richmond">Emma Richmond</string>
    <string name="thumb_up">thumb up</string>
    <string name="_12_likes">12 likes</string>
    <string name="text_sms">text sms</string>
    <string name="_4_comments">4 Comments</string>
    <string name="_3h_ago">3h ago</string>
    <string name="easthampton_ma">Easthampton, MA</string>
    <string name="_1k_likes">1k likes</string>
    <string name="_1_2k_comments">1.2k Comments</string>
    <string name="_24h_ago">24h ago</string>
    <string name="profile">profile</string>
    <string name="search_post">Search post</string>
    <string name="close">close</string>
    <string name="company">Company</string>
    <string name="name">Name</string>
    <string name="phone_number">phone number</string>
    <string name="phone_type">Phone Type</string>
    <string name="email_id">email id</string>
    <string name="email">Email</string>
    <string name="email_type">Email Type</string>
    <string name="location">location</string>
    <string name="address">Address</string>
    <string name="domain">domain</string>
    <string name="title">Title</string>
    <string name="public_domain">public domain</string>
    <string name="website">Website</string>
    <string name="form">form</string>
    <string name="click_button_to_add_new_post">Click button to add new post</string>
    <string name="david_park">David Park</string>
    <string name="post">POST</string>
    <string name="write_something">Write something …</string>
    <string name="photo">photo</string>
    <string name="link">link</string>
    <string name="description">description</string>
    <string name="more">more</string>
    <string name="add">add</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="send_feedback">Send feedback</string>
    <string name="help">Help</string>
    <string name="signout">Signout</string>
    <string name="new_releases">New Releases</string>
    <string name="mauris_sagittis_non_elit">Mauris sagittis non elit</string>
    <string name="kodaline">Kodaline</string>
    <string name="aliquam">Aliquam</string>
    <string name="one_republic">One Republic</string>
    <string name="recommended">Recommended</string>
    <string name="curabitur_tempus">Curabitur tempus</string>
    <string name="quisque">Quisque</string>
    <string name="aliquam_ac_elit">Aliquam ac elit</string>
    <string name="top_rated">Top Rated</string>
    <string name="suspendisse_ornare">Suspendisse ornare</string>
    <string name="adipiscing">Adipiscing</string>
    <string name="placerat_vel_ipsum">Placerat vel ipsum</string>
    <string name="amet_rutrum">amet rutrum</string>
    <string name="hi_welcome_back">Hi, welcome back…</string>
    <string name="active_classes">Active Classes</string>
    <string name="google_student_service">Google Student service</string>
    <string name="applied_classes">Applied Classes</string>
    <string name="google_nest">Google Nest</string>
    <string name="pending">Pending…</string>
    <string name="hello_world_ambassador">Hello World Ambassador</string>
    <string name="for_you">For you</string>
    <string name="points_2000">Points: 2000</string>
    <string name="brand_ambassador">Brand Ambassador</string>
    <string name="campus">Campus</string>
    <string name="product_testing">Product Testing</string>
    <string name="glam">glam</string>
    <string name="refresh">Refresh</string>
    <string name="open_in_browser">Open in browser</string>
</resources>